<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registro_Individual_Trolebus">


    <TextView
        android:layout_gravity="center"
        android:text="@string/registro_individual"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/fecha_inicio"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fecha_inicio"
                android:textColor="@android:color/darker_gray"
                android:maxLines="1"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/fecha_inicial"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/fecha_prueba"
                android:textColor="@android:color/darker_gray"
                android:maxLines="1"
                android:focusable="false"
                android:textAlignment="center"/>

            <ImageButton
                android:id="@+id/calendario1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/calendario" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/fecha_fin"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fecha_final"
                android:textColor="@android:color/darker_gray"
                android:maxLines="1"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/fecha_final"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/fecha_prueba"
                android:textColor="@android:color/darker_gray"
                android:maxLines="1"
                android:focusable="false"
                android:textAlignment="center"/>

            <ImageButton
                android:id="@+id/calendario2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/calendario" />

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>





</LinearLayout>